# ComputerUseAgent

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
adaptivecua/: __main__.py  app.py  config.py  env.py
adaptivecua/core/: audit.py  events.py  history.py  safety.py  session.py
adaptivecua/executors/: action_payload.py  base.py  local.py  web.py  web_launch.py  web_translate.py
adaptivecua/providers/: anthropic.py  anthropic_translate.py  base.py  openai.py  openai_translate.py
adaptivecua/telemetry/: __init__.py  recorder.py
cua/: __main__.py  app.py  config.py  models.py  registry.py
docs/: RUNNING.md
scripts/: diag_vision.py  smoke_desktop.py  smoke_gui.py  smoke_local_notepad.py  smoke_session.py
tests/: fakes.py  test_a11y_backend.py  test_a11y_provider.py  test_action_payload.py  test_anthropic_provider.py  test_anthropic_translate.py  test_audit.py  test_browser_wiring.py  test_build_session.py  test_config.py  test_confirm.py  test_desktop_agent.py  test_desktop_executor.py  test_desktop_translate.py  test_dom_marks.py  test_dom_vision_provider.py  test_env.py  test_events.py  test_executor_factory.py  test_fakes.py  test_format.py  test_generic_provider_factory.py  test_history.py  test_local_executor.py  test_main_args.py  test_models.py  test_models_clicks.py  test_openai_provider.py  test_openai_translate.py  test_queue.py  test_registry.py  test_runner.py  test_safety.py  test_safety_policy.py  test_session.py  test_session_safety.py  test_trajectory.py  test_vision_actions.py  test_vision_imaging.py  test_vision_ocr.py  (+4 more)
(+55 files in other folders)
