[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cua"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
web = ["playwright>=1.40"]
desktop = ["httpx>=0.27"]
local = ["pyautogui>=0.9.54", "Pillow>=10"]
test = ["pytest>=8", "pytest-asyncio>=0.23"]
ui = ["prompt_toolkit>=3.0", "PySide6>=6.6", "qasync>=0.27"]
vision = ["openai>=1.40", "Pillow>=10", "pytesseract>=0.3"]

[tool.setuptools.packages.find]
include = ["cua*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
